tests/toylang/neg/000521_mutation.toylang
program a = { a = a + bool; } .
